fix: adiciona banco local

--- a/src/WebAPI/appsettings.Development.json
+++ b/src/WebAPI/appsettings.Development.json
@@ -1,7 +1,6 @@
 ﻿{
   "ConnectionStrings": {
-    "GestaoProdutoDB": "Host=tuffi.db.elephantsql.com;Port=5432;Pooling=true;Database=wkhnmcdn;User Id=wkhnmcdn;Password=HqVRxPSLQeW4CxCCz4Ur-MjUL1g-o8DM;"
-
+    "GestaoProdutoDB": "Host=localhost;Port=5433;Database=gestaoproduto;User Id=gestaoproduto;Password=gestaoproduto;"
   },
   "Logging": {
     "LogLevel": {
